--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
       "javascript", // ...
       "html", // Add "html" to enable linting `.html` files.
     ],
+    "liveServer.settings.port": 5501,
   }
